# apt

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Procfile  README.md  clean_styles.py  clean_syntax.py  index.html  nixpacks.toml  package-lock.json  package.json  railway.json  tsconfig.app.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthModal.tsx  BuilderCanvas.tsx  ComponentLibrary.tsx  DataBindingPanel.tsx  PreviewPanel.tsx  PropertyEditor.tsx  RenderComponent.tsx  (+2 more)
mobile-expo/: .env  .gitignore  App.tsx  app.json  eas.json  package-lock.json  package.json
src/: App.tsx  api.rs  apiClient.ts  app_generator.rs  auth.rs  builder.rs  cli.rs  db.rs  ecommerceBlocks.ts  initialTemplates.ts  main.rs  models.rs  qr_generator.rs  templates.rs  types.ts
src/api/: agent.rs  ai.rs  analytics.rs  apps.rs  blocks.rs  builds.rs  config.rs  generate.rs  health.rs  htmx.rs  media.rs  mod.rs  navigation.rs  pages.rs  preview.rs  projects.rs  publish.rs  push.rs  qr.rs  settings.rs
src/components/: CollectionModal.tsx  IconSelector.tsx  SidebarLeft.tsx  SidebarRight.tsx  WorkspaceCanvas.tsx
src/db/: analytics.rs  apps.rs  blocks.rs  builds.rs  media.rs  mod.rs  navigation.rs  pages.rs  projects.rs  publish.rs  settings.rs  users.rs
src/services/: ai.rs  app_generator.rs  builder.rs  mod.rs  preview.rs  qr_generator.rs  templates.rs
static/: app-dashboard.html  app-dashboard.js  app.js  index.html  styles.css  templates.js
static/app/: index.html
temp/: check_errors.js  screenshot.js
(+17 files in other folders)
